src/app/page.module.css
.main {
  width: 1050dvw;
  height: 100dvh;
  background-image: url("../assets/background.jpg");
  background-color: #78d6f0;
  background-size: contain;
}

.main div {
  position: absolute;
}

.goSlow, .swimAgain {
  bottom: -4dvh;
  width: 16rem;
  height: auto;
}

.goSlow {
  left: 0;
}

.swimAgain {
  left: 980dvw;
  cursor: pointer;
}

.main img {
  width: 100%;
  height: 100%;
}

.angelfish {
  top: 25dvh;
  left: 620dvw;
  width: 12rem;
  height: auto;
}

.angelfish.animate {
  animation: angelfish 12s linear forwards;
}

@keyframes angelfish {
  12% {
    transform: translateY(20px);
  }

  25% {
    transform: translateY(10px);
  }

  37% {
    transform: translateY(15px);
  }

  50% {
    transform: translateY(5px);
  }

  100% {
    left: -50dvw;
    display: none;
  }
}

.barracuda {
  top: 35dvh;
  left: 1000dvw;
  width: 12.5rem;
  height: auto;
}

.barracuda.animate {
  animation: linear-swim 22s linear forwards;
}

@keyframes linear-swim {
  100% {
    left: -50dvw;
    display: none;
  }
}

.blueTang {
  top: 25dvh;
  left: 210dvw;
  width: 8rem;
  height: auto;
}

.blueTang.animate {
  animation: blueTang 6s linear forwards;
}

@keyframes blueTang {
  12% {
    transform: rotate(-10deg);
  }

  25% {
    transform: rotate(0);
    top: 35dvh;
  }

  37% {
    transform: rotate(10deg);
  }

  50% {
    transform: rotate(0);
    top: 30dvh;
  }

  100% {
    left: -50dvh;
    display: none;
  }
}

.eagleRay {
  top: 50dvh;
  left: 460dvw;
  width: 21rem;
  height: auto;
}

.eagleRay.animate {
  animation: eagle-ray 8s linear forwards;
}

@keyframes eagle-ray {
  100% {
    transform: rotate(-10deg);
    top: 10dvh;
    left: -50dvw;
    display: none;
  }
}

.eel {
  bottom: -1dvh;
  left: 520dvw;
  width: 16rem;
  height: auto;
}

.eel.animate {
  animation: eel 2.5s linear infinite;
}

@keyframes eel {
  50% {
    transform: translateX(50px) scale(1.2, 0.9);
  }

  100% {
    transform: translateX(0);
  }
}

.manatee {
  top: 64dvh;
  left: 250dvw;
  width: 17rem;
  height: auto;
}

.manatee.animate {
  animation: manatee 5s ease-in-out infinite;
}

@keyframes manatee {
  0% {
    transform: rotate(0);
  }

  25% {
    transform: rotate(5deg) translateY(15px);
  }

  50% {
    transform: rotate(0) translateY(0);
  }

  75% {
    transform: rotate(-5deg) translateY(15px);
  }

  100% {
    transform: rotate(0) translateY(0);
  }
}

.mantaRay {
  top: 15dvh;
  left: 880dvw;
  width: 13rem;
  height: auto;
}

.mantaRay.animate {
  animation: manta-ray 14s linear forwards;
}

@keyframes manta-ray {
  100% {
    transform: rotate(5deg);
    top: 40dvh;
    left: -50dvw;
    display: none;
  }
}

.nurseShark {
  top: 45dvh;
  left: 680dvw;
  width: 30rem;
  height: auto;
}

.nurseShark.animate {
  animation: linear-swim 23s linear forwards;
}

.parrotfish {
  top: 45dvh;
  left: 920dvw;
  width: 11rem;
  height: auto;
}

.parrotfish.animate {
  animation: linear-swim 12s linear forwards;
}

.seahorse {
  top: 10dvh;
  left: 970dvw;
  width: 6.5rem;
  height: auto;
}

.seahorse.animate {
  animation: seahorse 3s linear infinite;
}

@keyframes seahorse {
  0% {
    transform: translateY(0);
  }

  25% {
    transform: translateY(8px);
  }

  50% {
    transform: translateY(0);
  }

  75% {
    transform: translateY(-8px);
  }

  100% {
    transform: translateY(0);
  }
}

.starfish {
  bottom: 0.5dvh;
  left: 790dvw;
  width: 10rem;
  height: auto;
}

.starfish.animate {
  animation: starfish 5s linear infinite;
}

@keyframes starfish {
  0% {
    transform: rotate(0);
  }

  25% {
    transform: rotate(5deg);
  }

  50% {
    transform: rotate(0);
  }

  75% {
    transform: rotate(-5deg);
  }

  100% {
    transform: rotate(0);
  }
}

.stingray {
  top: 55dvh;
  left: 120dvw;
  width: 18rem;
  height: auto;
}

.stingray.animate {
  animation: stingray 4s linear forwards;
}

@keyframes stingray {
  60% {
    top: 45dvh;
  }

  100% {
    top: 35dvh;
    left: -50dvh;
    display: none;
  }
}

.turtle {
  top: 50dvh;
  left: 380dvw;
  width: 14rem;
  height: auto;
}

.turtle.animate {
  animation: turtle 6s ease-in-out forwards;
}

@keyframes turtle {
  60% {
    transform: rotate(15deg);
    top: 20dvh;
  }

  100% {
    transform: rotate(5deg);
    top: 20dvh;
    left: -50dvw;
    display: none;
  }
}

@media screen and (min-width: 768px) {
  .angelfish.animate {
    animation: angelfish 24s linear forwards;
  }

  .barracuda.animate {
    animation: linear-swim 42s linear forwards;
  }

  .blueTang.animate {
    animation: blueTang 12s linear forwards;
  }

  .eagleRay.animate {
    animation: eagle-ray 16s linear forwards;
  }

  .mantaRay.animate {
    animation: manta-ray 28s linear forwards;
  }

  .nurseShark.animate {
    animation: linear-swim 46s linear forwards;
  }

  .parrotfish.animate {
    animation: linear-swim 24s linear forwards;
  }

  .stingray.animate {
    animation: stingray 8s linear forwards;
  }

  .turtle.animate {
    animation: turtle 12s ease-in-out forwards;
  }
}

